PMforce/src/objects/Contact.object
<CustomObject>
    <fields>
        <fullName>Access_Card_Transferred_to__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Access Card Transferred to..</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>$Source.RecordTypeId</field>
                <operation>equals</operation>
                <value>Employee</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Access Card Transferred to...</relationshipLabel>
        <relationshipName>Contacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Access_Card__c</fullName>
        <label>Access Card #</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Employee_ID__c</fullName>
        <label>Employee ID</label>
        <length>7</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Existing_Employee__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Existing Employee</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Feedback_ID__c</fullName>
        <label>Feedback ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Fullname_URL__c</fullName>
        <label>Fullname URL</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Joining_Date__c</fullName>
        <label>Joining Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LWD__c</fullName>
        <label>LWD</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Work_Location__c</fullName>
        <label>Work Location</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Pune</fullName>
                </value>
                <value>
                    <fullName>Nasik</fullName>
                </value>
                <value>
                    <fullName>Mumbai</fullName>
                </value>
                <value>
                    <fullName>Others</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <listViews>
        <fullName>AllContacts</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>Existing_Employee__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Employees</label>
    </listViews>
    <listViews>
        <fullName>BirthdaysThisMonth</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CONTACT.BIRTHDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.BIRTHDATE</field>
            <operation>equals</operation>
            <value>THIS_MONTH</value>
        </filters>
        <label>Birthdays This Month</label>
    </listViews>
    <listViews>
        <fullName>Nasik_Employees</fullName>
        <columns>Employee_ID__c</columns>
        <columns>FULL_NAME</columns>
        <columns>CONTACT.PHONE3</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>Work_Location__c</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>Access_Card__c</columns>
        <columns>CONTACT.BIRTHDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Contact.Employee</value>
        </filters>
        <filters>
            <field>Work_Location__c</field>
            <operation>equals</operation>
            <value>Nasik</value>
        </filters>
        <label>Nasik Employees</label>
    </listViews>
    <listViews>
        <fullName>NewThisWeek</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.CREATED_DATE</field>
            <operation>equals</operation>
            <value>THIS_WEEK</value>
        </filters>
        <label>New This Week</label>
    </listViews>
    <recordTypes>
        <fullName>Contact</fullName>
        <active>true</active>
        <description>External contacts like customer, partner, competion etc.</description>
        <label>Contact</label>
    </recordTypes>
    <recordTypes>
        <fullName>Employee</fullName>
        <active>true</active>
        <description>Internal employees of Aress.</description>
        <label>Employee</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>